# cv_lib

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements-lock.txt  requirements-torch.txt
.github/workflows/: ci.yml
notebooks/: usage_examples.ipynb  viz_test.ipynb
scripts/: batch_infer.py  check_infer.py  compare_gt_pred.py  compare_runs.py  eval.py
src/cv_lib/: __init__.py  cli.py  export.py
src/cv_lib/cli/: __init__.py  __main__.py  _augment.py  _autolabel.py  _bench.py  _common.py  _compare.py  _compare_runs.py  _convert.py  _crops.py  _csv_split.py  _cvat_query.py  _dedup.py  _distribution.py  _dvc_init.py  _eval.py  _export.py  _fix.py  _infer.py  _inspect.py  _merge.py  _mine.py  _qa.py  _remap.py  _split.py  _threshold.py  _train.py
src/cv_lib/data/: __init__.py  autolabel.py  convert.py  crops.py  csv_split.py  dedup.py  dvc_gen.py  inspect.py  merge.py  mining.py  qa.py  remap.py  repair.py  split.py
src/cv_lib/infer/: __init__.py  tiled.py
src/cv_lib/metrics/: __init__.py  threshold.py
src/cv_lib/train/: __init__.py
src/cv_lib/viz/: __init__.py  _utils.py  augment.py  batch.py  compare.py  distribution.py  errors.py
tests/: conftest.py  test_autolabel.py  test_cli.py  test_convert_reverse.py  test_convert_voc.py  test_crops.py  test_csv_split.py  test_cvat_csv_export.py  test_data.py  test_data_convert.py  test_data_inspect.py  test_dedup.py  test_distribution.py  test_dvc_gen.py  test_export.py  test_infer_tiled.py  test_merge.py  test_metrics.py  test_metrics_extra.py  test_mining.py  test_public_api.py  test_qa.py  test_remap.py  test_repair.py  test_split.py  test_threshold.py  test_train.py  test_train_cli.py  test_viz_augment.py  test_viz_batch.py  test_viz_compare.py  test_viz_errors.py
