[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-lib"
version = "0.1.0"
requires-python = ">=3.10,<3.13"  # 3.13 несовместим с cu118; снять при переходе на CUDA 12.4+
description = "CV utility library for iterating on object detection models"
dependencies = [
    # core vision
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "numpy>=1.26",
    # torch + torchvision устанавливаются отдельно через requirements-torch.txt
    # augmentations
    "albumentations>=1.4",
    # data / config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    # metrics & plots
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]

[project.scripts]
cvlib = "cv_lib.cli:main"

[project.optional-dependencies]
# torch + torchvision ставятся через отдельный extra, чтобы uv мог
# подтянуть их с cu118-индекса (pip-юзеры используют requirements-torch.txt)
cu118 = [
    "torch>=2.4,<2.6",
    "torchvision>=0.19,<0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

# ---------------------------------------------------------------------------
# uv — источники пакетов (игнорируется pip)
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]                 # длинные строки — предупреждение, не ошибка

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401"]  # notebooks: порядок импортов не важен

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
